fixing overflow-y property of modal

--- a/docs/styles/index.css
+++ b/docs/styles/index.css
@@ -82,18 +82,19 @@
 .modal {
     display: none;
     position: fixed;
-    /* z-index: 9999; */
+    z-index: 9999;
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vh;
-    overflow-y: auto;
+    height: 100%;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
     background-color: rgba(0, 0, 0, 0.6);
 }
 
 .modal-content {
     background-color: #fefefe;
-    margin: 15% auto;
+    margin: 20vh auto;
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
